@@ -21,9 +21,9 @@
 #ifndef __OTSERV_DEFINITIONS_H__
 #define __OTSERV_DEFINITIONS_H__
 
-#define CLIENT_VERSION_MIN 952
-#define CLIENT_VERSION_MAX 952
-#define CLIENT_VERSION_MIN_STR "9.52"
+#define CLIENT_VERSION_MIN 953
+#define CLIENT_VERSION_MAX 953
+#define CLIENT_VERSION_MIN_STR "9.53"
 
 #ifdef _WIN32
 #ifndef WIN32
