@@ -88,7 +88,8 @@ enum clientVersion_t
 	CLIENT_VERSION_944_V4 = 34,
 	CLIENT_VERSION_946 = 35,
 	CLIENT_VERSION_950 = 36,
-	CLIENT_VERSION_952 = 37
+	CLIENT_VERSION_952 = 37,
+	CLIENT_VERSION_953 = 38
 };
 
 enum rootattrib_
