@@ -44,6 +44,6 @@
 
 #define STATUS_SERVER_NAME "The Forgotten Server"
 #define STATUS_SERVER_CODENAME "Mystic Spirit"
-#define STATUS_SERVER_PROTOCOL "9.52"
+#define STATUS_SERVER_PROTOCOL "9.53"
 #define STATUS_SERVER_VERSION "0.2.13"
 #define STATUS_SERVER_DEVELOPERS "Talaturen, Kornholijo, Elf, Tryller, and Dalkon"
