@@ -33,7 +33,7 @@
 ]
 
 [ Milestone
-	Game protocol 9.52 support.
+	Game protocol 9.53 support.
 	Corrected Lua error function arguments in NPC system modules.
 	Increased NETWORKMESSAGE_MAXSIZE to prevent debugs if packets exceeded the old size.
 	Magic level skill boost will now show up in market details.
@@ -42,5 +42,6 @@
 	Added tag "log" to commands.
 	Replaced the old reverseFluidMap which wasn't working as intended with a new server-to-client map.
 	Rewrote how shopItems table worked in NPC ShopModule to work with items of same id but subtype that differs (i.e. different liquids in same fluid container).
+	Fixed an issue with numerous Lua functions would make the boolean parameters false.
 	Updated items.
 ]
